Profile window style
Ho dato uno style ala window profile e ritoccato qualcosa della export PDF

--- a/CLIENT/GUI/editorWindow/ui/gui_toolsbar.ui
+++ b/CLIENT/GUI/editorWindow/ui/gui_toolsbar.ui
@@ -48,6 +48,11 @@ QFontComboBox{
 	border-color: hsv(165, 55, 205);
 }
 
+QFontComboBox:focus{
+    border-width: 2px;
+	border-color: hsv(165, 55, 205);
+}
+
 QComboBox::down-arrow {
 	image: url(:/widgets_parts/widgets_parts/arrowdown.png);
 }
