--- a/CLIENT/GUI/ui/gimpdocs.ui
+++ b/CLIENT/GUI/ui/gimpdocs.ui
@@ -14,7 +14,7 @@
    <string>GIMPdocs</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">QMainWindow{background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(122, 158, 126, 255), stop:1 rgba(198, 255, 194, 255));}
+   <string notr="true">QMainWindow, QDialog{background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(122, 158, 126, 255), stop:1 rgba(198, 255, 194, 255));}
 </string>
   </property>
   <widget class="QWidget" name="centralwidget"/>
