--- a/CLIENT/GUI/ui/gui_login.ui
+++ b/CLIENT/GUI/ui/gui_login.ui
@@ -13,7 +13,46 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">QWidget#opendocTab,QWidget#newdocTab{
+	background-color: qlineargradient(spread:reflect, x1:0.5, y1:0, x2:0.5, y2:0.49, stop:0 rgba(207, 245, 236, 255), stop:0.17 rgba(215, 255, 245, 255), stop:1 rgba(230, 255, 249, 255));
+}
+
+QPushButton {
+	height: 25px;
+	width: 75px;
+    background-color: hsv(165, 55, 255);
+    border-width: 1px;
+	border-style: outset;
+	border-color: hsv(165, 55, 205);
+}
+
+QPushButton:hover:!pressed{
+	border-color: hsv(165, 255, 255);
+	border-top-color: hsv(165, 200, 255);	
+	border-left-color: hsv(165, 200, 255);
+}
+
+QPushButton:pressed,QPushButton:checked {
+    border-style: inset;
+	background-color: hsv(165, 55, 220);
+}
+
+QLineEdit{
+    border-width: 2px;
+	border-style: inset;
+	border-color: hsv(165, 55, 205);
+}
+
+QLineEdit:focus{
+	border-color: hsv(165, 105, 205);
+}
+</string>
+  </property>
   <layout class="QGridLayout" name="gridLayout" rowstretch="1,0,3,0,0,0,4" columnstretch="1,1,0,2">
+   <property name="verticalSpacing">
+    <number>10</number>
+   </property>
    <item row="4" column="1">
     <widget class="QLabel" name="label_2">
      <property name="cursor">
@@ -45,6 +84,12 @@
    </item>
    <item row="3" column="2">
     <widget class="QLineEdit" name="usernameLineEdit">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>25</height>
+      </size>
+     </property>
      <property name="text">
       <string>I'm</string>
      </property>
@@ -52,6 +97,12 @@
    </item>
    <item row="4" column="2">
     <widget class="QLineEdit" name="passwordLineEdit">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>25</height>
+      </size>
+     </property>
      <property name="text">
       <string>lazy</string>
      </property>
