--- a/CLIENT/GUI/ui/gui_uri.ui
+++ b/CLIENT/GUI/ui/gui_uri.ui
@@ -13,6 +13,34 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">QDialog{
+	background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(122, 158, 126, 255), stop:1 rgba(198, 255, 194, 255));
+}
+/*QWidget#opendocTab,QWidget#newdocTab{
+	background-color: qlineargradient(spread:reflect, x1:0.5, y1:0, x2:0.5, y2:0.49, stop:0 rgba(207, 245, 236, 255), stop:0.17 rgba(215, 255, 245, 255), stop:1 rgba(230, 255, 249, 255));
+}*/
+
+QPushButton {
+	height: 25px;
+	width: 75px;
+    background-color: hsv(165, 55, 255);
+    border-width: 1px;
+	border-style: outset;
+	border-color: hsv(165, 55, 205);
+}
+
+QPushButton:hover:!pressed{
+	border-color: hsv(165, 255, 255);
+	border-top-color: hsv(165, 200, 255);	
+	border-left-color: hsv(165, 200, 255);
+}
+
+QPushButton:pressed,QPushButton:checked {
+    border-style: inset;
+	background-color: hsv(165, 55, 220);
+}</string>
+  </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="1">
     <spacer name="verticalSpacer">
