Cut, Copy, Paste buttons state added
Ora i 3 bottoni, colle rispettive azioni, possono essere disabilitati

--- a/CLIENT/GUI/editorWindow/ui/gui_editorwindow.ui
+++ b/CLIENT/GUI/editorWindow/ui/gui_editorwindow.ui
@@ -92,11 +92,17 @@
    </property>
   </action>
   <action name="actionCopy">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Copy</string>
    </property>
   </action>
   <action name="actionCut">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Cut</string>
    </property>
