--- a/CLIENT/GUI/editorWindow/ui/gui_toolsbar.ui
+++ b/CLIENT/GUI/editorWindow/ui/gui_toolsbar.ui
@@ -298,6 +298,9 @@ QSpinBox::down-button:pressed,QSpinBox::up-button:pressed {
           <layout class="QHBoxLayout" name="horizontalLayout_3">
            <item>
             <widget class="QPushButton" name="cutPushButton">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
              <property name="toolTip">
               <string>Cut</string>
              </property>
@@ -312,6 +315,9 @@ QSpinBox::down-button:pressed,QSpinBox::up-button:pressed {
            </item>
            <item>
             <widget class="QPushButton" name="copyPushButton">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
              <property name="toolTip">
               <string>Copy</string>
              </property>
@@ -326,6 +332,9 @@ QSpinBox::down-button:pressed,QSpinBox::up-button:pressed {
            </item>
            <item>
             <widget class="QPushButton" name="pastePushButton">
+             <property name="enabled">
+              <bool>true</bool>
+             </property>
              <property name="toolTip">
               <string>Paste</string>
              </property>
