--- a/CLIENT/GUI/ui/gui_server.ui
+++ b/CLIENT/GUI/ui/gui_server.ui
@@ -1,33 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>GUI_Server</class>
- <widget class="QDialog" name="GUI_Server">
+ <widget class="QWidget" name="GUI_Server">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>520</width>
-    <height>360</height>
+    <width>549</width>
+    <height>349</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Form</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">QDialog{
-	background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(122, 158, 126, 255), stop:1 rgba(198, 255, 194, 255));
-}
-
-QWidget#backgroundWidget{
-	background-color: qlineargradient(spread:reflect, x1:0.5, y1:0, x2:0.5, y2:0.49, stop:0 rgba(207, 245, 236, 255), stop:0.17 rgba(215, 255, 245, 255), stop:1 rgba(230, 255, 249, 255));
-	border-width: 1px;
-	border-style: solid;
-	border-color: hsv(165, 55, 205);
-}
-
-QPushButton {
-	min-height: 20px;
-	min-width: 65px;
+   <string notr="true">QPushButton {
+	min-height: 25px;
+	min-width: 75px;
 	padding: 5px;	
 	padding-left: 10px;
 	padding-right: 10px;
@@ -46,24 +35,41 @@ QPushButton:hover:!pressed{
 QPushButton:pressed,QPushButton:checked {
     border-style: inset;
 	background-color: hsv(165, 55, 220);
+}
+
+QLineEdit{
+    border-width: 2px;
+	border-style: inset;
+	border-color: hsv(165, 55, 205);
+}
+
+QLineEdit:focus{
+	border-color: hsv(165, 105, 205);
 }</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout" rowstretch="4,0,1,0,0,0,4" columnstretch="1,1,0,2">
+  <layout class="QGridLayout" name="gridLayout" rowstretch="4,0,1,0,0,0,5" columnstretch="1,2,0,3" rowminimumheight="0,0,0,0,0,0,0">
    <item row="0" column="2">
-    <spacer name="verticalSpacer_3">
+    <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
        <width>20</width>
-       <height>117</height>
+       <height>71</height>
       </size>
      </property>
     </spacer>
    </item>
    <item row="1" column="2">
     <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QLabel" name="descriptionLabel">
+       <property name="text">
+        <string>Insert server information</string>
+       </property>
+      </widget>
+     </item>
      <item>
       <spacer name="horizontalSpacer_3">
        <property name="orientation">
@@ -77,27 +83,20 @@ QPushButton:pressed,QPushButton:checked {
        </property>
       </spacer>
      </item>
-     <item>
-      <widget class="QLabel" name="descriptionLabel">
-       <property name="text">
-        <string>Setup target server</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <spacer name="horizontalSpacer_4">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
     </layout>
+   </item>
+   <item row="2" column="0">
+    <spacer name="horizontalSpacer">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>82</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
    </item>
    <item row="2" column="2">
     <spacer name="verticalSpacer_2">
@@ -107,19 +106,19 @@ QPushButton:pressed,QPushButton:checked {
      <property name="sizeHint" stdset="0">
       <size>
        <width>20</width>
-       <height>28</height>
+       <height>20</height>
       </size>
      </property>
     </spacer>
    </item>
-   <item row="3" column="0">
-    <spacer name="horizontalSpacer">
+   <item row="2" column="3">
+    <spacer name="horizontalSpacer_2">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
-       <width>68</width>
+       <width>158</width>
        <height>20</height>
       </size>
      </property>
@@ -134,19 +133,6 @@ QPushButton:pressed,QPushButton:checked {
    </item>
    <item row="3" column="2">
     <widget class="QLineEdit" name="addressLineEdit"/>
-   </item>
-   <item row="3" column="3">
-    <spacer name="horizontalSpacer_2">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>139</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
    </item>
    <item row="4" column="1">
     <widget class="QLabel" name="portLabel">
@@ -174,14 +160,14 @@ QPushButton:pressed,QPushButton:checked {
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="connectPushButton">
+      <widget class="QPushButton" name="confirmPushButton">
        <property name="text">
         <string>Confirm</string>
        </property>
       </widget>
      </item>
      <item>
-      <spacer name="horizontalSpacer_6">
+      <spacer name="horizontalSpacer_4">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
@@ -196,14 +182,14 @@ QPushButton:pressed,QPushButton:checked {
     </layout>
    </item>
    <item row="6" column="2">
-    <spacer name="verticalSpacer">
+    <spacer name="verticalSpacer_3">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
        <width>20</width>
-       <height>117</height>
+       <height>90</height>
       </size>
      </property>
     </spacer>
