Recover connection - part2
Le schermate ci sono e funzionano (more or less), ma devo ancora organizzare bene la loro gestione nell'intera applicazione

--- a/CLIENT/GUI/images/images.qrc
+++ b/CLIENT/GUI/images/images.qrc
@@ -35,4 +35,7 @@
         <file>widgets_parts/arrow-down.png</file>
         <file>widgets_parts/arrow-up.png</file>
     </qresource>
+    <qresource prefix="/other">
+        <file>connecting.gif</file>
+    </qresource>
 </RCC>
