--- a/CLIENT/GUI/connection/ui/gui_server.ui
+++ b/CLIENT/GUI/connection/ui/gui_server.ui
@@ -132,7 +132,11 @@ QLineEdit:focus{
     </widget>
    </item>
    <item row="3" column="2">
-    <widget class="QLineEdit" name="addressLineEdit"/>
+    <widget class="QLineEdit" name="addressLineEdit">
+     <property name="text">
+      <string>192.168.1.6</string>
+     </property>
+    </widget>
    </item>
    <item row="4" column="1">
     <widget class="QLabel" name="portLabel">
@@ -142,7 +146,11 @@ QLineEdit:focus{
     </widget>
    </item>
    <item row="4" column="2">
-    <widget class="QLineEdit" name="portLineEdit"/>
+    <widget class="QLineEdit" name="portLineEdit">
+     <property name="text">
+      <string>61384</string>
+     </property>
+    </widget>
    </item>
    <item row="5" column="2">
     <layout class="QHBoxLayout" name="horizontalLayout_2">
