--- a/CLIENT/GUI/ui/gui_profile.ui
+++ b/CLIENT/GUI/ui/gui_profile.ui
@@ -350,7 +350,7 @@ QComboBox QAbstractItemView {
            </size>
           </property>
           <property name="echoMode">
-           <enum>QLineEdit::PasswordEchoOnEdit</enum>
+           <enum>QLineEdit::Password</enum>
           </property>
           <property name="clearButtonEnabled">
            <bool>false</bool>
@@ -382,7 +382,7 @@ QComboBox QAbstractItemView {
            </size>
           </property>
           <property name="echoMode">
-           <enum>QLineEdit::PasswordEchoOnEdit</enum>
+           <enum>QLineEdit::Password</enum>
           </property>
          </widget>
         </item>
