--- a/CLIENT/GUI/connection/ui/gui_server.ui
+++ b/CLIENT/GUI/connection/ui/gui_server.ui
@@ -134,7 +134,7 @@ QLineEdit:focus{
    <item row="3" column="2">
     <widget class="QLineEdit" name="addressLineEdit">
      <property name="text">
-      <string>192.168.1.9</string>
+      <string>192.168.56.1</string>
      </property>
     </widget>
    </item>
@@ -148,7 +148,7 @@ QLineEdit:focus{
    <item row="4" column="2">
     <widget class="QLineEdit" name="portLineEdit">
      <property name="text">
-      <string>5</string>
+      <string/>
      </property>
     </widget>
    </item>
