--- a/CLIENT/GUI/editorWindow/ui/gui_toolsbar.ui
+++ b/CLIENT/GUI/editorWindow/ui/gui_toolsbar.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1401</width>
+    <width>1547</width>
     <height>70</height>
    </rect>
   </property>
@@ -1012,20 +1012,28 @@ QSpinBox::down-button:pressed,QSpinBox::up-button:pressed {
           </spacer>
          </item>
          <item>
-          <widget class="QLabel" name="bewareLabel">
-           <property name="font">
-            <font>
-             <pointsize>12</pointsize>
-             <weight>75</weight>
-             <bold>true</bold>
-            </font>
-           </property>
+          <widget class="QWidget" name="bewareLabelWidget" native="true">
            <property name="styleSheet">
-            <string notr="true">QLabel { color : red; }</string>
+            <string notr="true">QLabel { color : red;
+font: 75 12pt &quot;MS Shell Dlg 2&quot;;}</string>
            </property>
-           <property name="text">
-            <string>Beware: This operation compromized undo cronology</string>
-           </property>
+           <layout class="QHBoxLayout" name="horizontalLayout_8">
+            <property name="spacing">
+             <number>0</number>
+            </property>
+            <property name="leftMargin">
+             <number>0</number>
+            </property>
+            <property name="topMargin">
+             <number>0</number>
+            </property>
+            <property name="rightMargin">
+             <number>0</number>
+            </property>
+            <property name="bottomMargin">
+             <number>0</number>
+            </property>
+           </layout>
           </widget>
          </item>
          <item>
